--- a/eam/wrapper/wrapper-all/src/main/resources/application.yml
+++ b/eam/wrapper/wrapper-all/src/main/resources/application.yml
@@ -40,11 +40,11 @@ spring:
     content-type: text/html
     mode: HTML5
     cache: false
-  session:
-    store-type: redis # 使用 redis 存储session
-  redis:
-      port: 6379
-      host: 127.0.0.1
+  #session:
+    #store-type: redis # 使用 redis 存储session
+  #redis:
+      #port: 6379
+      #host: 127.0.0.1
 
 
 
