--- a/eam/common/generator/pom.xml
+++ b/eam/common/generator/pom.xml
@@ -46,11 +46,11 @@
             <version>${platform.version}</version> 
         </dependency> 
         
-        <dependency> 
-            <groupId>com.dt.eam</groupId>  
-            <artifactId>domain</artifactId>  
-            <version>${platform.version}</version> 
-        </dependency> 
+<!--        <dependency> -->
+<!--            <groupId>com.dt.eam</groupId>  -->
+<!--            <artifactId>domain</artifactId>  -->
+<!--            <version>${platform.version}</version> -->
+<!--        </dependency> -->
         
 		<dependency> 
             <groupId>com.dt.eam</groupId>  
