--- a/eam/view/view-eam/pom.xml
+++ b/eam/view/view-eam/pom.xml
@@ -1,30 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">  
-    <modelVersion>4.0.0</modelVersion>  
-    <parent> 
-        <groupId>org.springframework.boot</groupId>  
-        <artifactId>spring-boot-starter-parent</artifactId>  
-        <version>2.3.3.RELEASE</version>  
-        <relativePath/>  
-        <!-- lookup parent from repository --> 
-    </parent>  
-    <groupId>com.dt.eam</groupId>  
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.dt.eam</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.0.2.RELEASE</version>
+        <relativePath/>
+        <!-- lookup parent from repository -->
+    </parent>
+
     <artifactId>view-eam</artifactId>
-    <version>0.0.2.RELEASE</version>  
     <name>view-eam</name>  
-    <description>EAM View</description>  
-    <properties> 
-        <java.version>1.8</java.version>  
-        <junit.jupiter.version>5.7.0</junit.jupiter.version>  
-        <junit.vintage.version>5.7.0</junit.vintage.version>  
-        <junit.platform.version>1.7.0</junit.platform.version>  
-        <foxnic.version>1.2.1.RELEASE</foxnic.version>
-        <platform.version>0.0.2.RELEASE</platform.version>
-        <foxnic.version>1.2.1.RELEASE</foxnic.version>
-        <foxnic-web.version>0.0.4.RELEASE</foxnic-web.version>
-    </properties>  
-    <dependencies> 
+    <description>EAM View</description>
+
+    <dependencies>
         <dependency> 
             <groupId>com.github.foxnic.web</groupId>  
             <artifactId>domain</artifactId>  
@@ -40,27 +30,8 @@
             <groupId>com.github.foxnic.web</groupId>  
             <artifactId>proxy</artifactId>  
             <version>${foxnic-web.version}</version>
-        </dependency>  
-        <dependency> 
-            <groupId>org.springframework.boot</groupId>  
-            <artifactId>spring-boot-starter-web</artifactId>  
-            <!-- 移除掉默认支持的 Tomcat -->  
-            <exclusions> 
-                <exclusion> 
-                    <groupId>org.springframework.boot</groupId>  
-                    <artifactId>spring-boot-starter-tomcat</artifactId> 
-                </exclusion> 
-            </exclusions> 
-        </dependency>  
-        <!-- 添加 Undertow 容器 -->  
-        <dependency> 
-            <groupId>org.springframework.boot</groupId>  
-            <artifactId>spring-boot-starter-undertow</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.github.ben-manes.caffeine</groupId>  
-            <artifactId>caffeine</artifactId> 
-        </dependency>  
+        </dependency>
+
         <dependency> 
             <groupId>com.github.foxnic</groupId>  
             <artifactId>foxnic-commons</artifactId>  
