--- a/eam/wrapper/wrapper-all/pom.xml
+++ b/eam/wrapper/wrapper-all/pom.xml
@@ -5,26 +5,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
-		<relativePath />
+		<groupId>com.dt.eam</groupId>
+		<artifactId>parent</artifactId>
+		<version>0.0.2.RELEASE</version>
+		<relativePath/>
 		<!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dt.eam</groupId>
-	<version>0.0.2.RELEASE</version>
+
 	<artifactId>wrapper-all</artifactId>
 	<name>wrapper-all</name>
 	<description>Wrapper-All</description>
-	<properties>
-		<skipTests>true</skipTests>
-		<java.version>1.8</java.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<platform.version>0.0.2.RELEASE</platform.version>
-		<foxnic-web.version>0.0.4.RELEASE</foxnic-web.version>
-	</properties>
+
 	<dependencies>
 	
 		<dependency>
@@ -79,6 +70,24 @@
 			<artifactId>view-console</artifactId>
 			<version>${foxnic-web.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<!-- 移除掉默认支持的 Tomcat -->
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- 添加 Undertow 容器 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-undertow</artifactId>
+		</dependency>
+
 		<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -90,6 +99,9 @@
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 		-->
+
+
+
 	</dependencies>
 	<dependencyManagement></dependencyManagement>
 	<build>
