--- a/eam/view/view-console/pom.xml
+++ b/eam/view/view-console/pom.xml
@@ -14,118 +14,21 @@
     <name>view-console</name>  
     <description>Console View</description>  
 
-    <dependencies> 
-        <dependency> 
-            <groupId>com.github.foxnic.web</groupId>  
-            <artifactId>domain</artifactId>  
-            <version>${foxnic-web.version}</version>
-            <exclusions> 
-                <exclusion> 
-                    <groupId>com.github.xiaoymin</groupId>  
-                    <artifactId>knife4j-micro-spring-boot-starter</artifactId> 
-                </exclusion> 
-            </exclusions> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.github.foxnic.web</groupId>  
-            <artifactId>proxy</artifactId>  
+    <dependencies>
+        <dependency>
+            <groupId>com.github.foxnic.web</groupId>
+            <artifactId>view-console</artifactId>
             <version>${foxnic-web.version}</version>
         </dependency>
-
-        <dependency> 
-            <groupId>com.github.foxnic</groupId>  
-            <artifactId>foxnic-commons</artifactId>  
-            <version>${foxnic.version}</version> 
-        </dependency>  
-        <dependency> 
-            <groupId>org.springframework.boot</groupId>  
-            <artifactId>spring-boot-starter-thymeleaf</artifactId> 
-        </dependency>  
-        <dependency> 
-            <groupId>org.springframework.boot</groupId>  
-            <artifactId>spring-boot-starter-test</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-console -->  
-        <dependency> 
-            <groupId>org.junit.platform</groupId>  
-            <artifactId>junit-platform-console</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-runner -->  
-        <dependency> 
-            <groupId>org.junit.platform</groupId>  
-            <artifactId>junit-platform-runner</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <dependency> 
-            <groupId>org.junit.platform</groupId>  
-            <artifactId>junit-platform-launcher</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <!-- https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine -->  
-        <dependency> 
-            <groupId>org.junit.vintage</groupId>  
-            <artifactId>junit-vintage-engine</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->  
-        <dependency> 
-            <groupId>org.junit.jupiter</groupId>  
-            <artifactId>junit-jupiter-engine</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <dependency> 
-            <groupId>org.junit.jupiter</groupId>  
-            <artifactId>junit-jupiter</artifactId>  
-            <scope>test</scope> 
-        </dependency>  
-        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->  
-        <dependency> 
-            <groupId>org.junit.jupiter</groupId>  
-            <artifactId>junit-jupiter-api</artifactId>  
-            <scope>test</scope> 
-        </dependency> 
-    </dependencies>  
-    <repositories> 
-        <repository> 
-            <id>releases</id>  
-            <name>Releases</name>  
-            <url>http://47.92.240.43:9091/repository/maven-releases/</url>  
-            <releases> 
-                <enabled>true</enabled>  
-                <updatePolicy>always</updatePolicy> 
-            </releases>  
-            <snapshots> 
-                <enabled>true</enabled>  
-                <updatePolicy>always</updatePolicy> 
-            </snapshots> 
-        </repository>  
-        <repository> 
-            <id>snapshots</id>  
-            <name>Snapshots</name>  
-            <url>http://47.92.240.43:9091/repository/maven-snapshots/</url>  
-            <releases> 
-                <enabled>true</enabled>  
-                <updatePolicy>always</updatePolicy> 
-            </releases>  
-            <snapshots> 
-                <enabled>true</enabled>  
-                <updatePolicy>always</updatePolicy> 
-            </snapshots> 
-        </repository> 
-    </repositories>  
-    <pluginRepositories> 
-        <pluginRepository> 
-            <id>releases</id>  
-            <name>Releases</name>  
-            <url>http://47.92.240.43:9091/repository/maven-releases/</url>  
-            <releases> 
-                <enabled>true</enabled> 
-            </releases>  
-            <snapshots> 
-                <enabled>true</enabled> 
-            </snapshots> 
-        </pluginRepository> 
-    </pluginRepositories>  
+        <dependency>
+            <groupId>com.dt.eam</groupId>
+            <artifactId>domain</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dt.eam</groupId>
+            <artifactId>proxy</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+    </dependencies>
 </project>
