调整项目结构，增加子项目

--- a/eam/common/domain/pom.xml
+++ b/eam/common/domain/pom.xml
@@ -20,6 +20,11 @@
             <version>${foxnic.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.foxnic.web</groupId>
+            <artifactId>domain</artifactId>
+            <version>${foxnic-web.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.xiaoymin</groupId>  
             <artifactId>knife4j-micro-spring-boot-starter</artifactId>  
             <version>${knife4j.version}</version> 
