--- a/eam/common/framework/pom.xml
+++ b/eam/common/framework/pom.xml
@@ -48,6 +48,12 @@
             <version>${foxnic-web.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.dt.eam</groupId>
+            <artifactId>domain</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <dependency>
@@ -55,10 +61,17 @@
             <artifactId>poi</artifactId>
             <version>3.17</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
         <dependency>
