--- a/eam/view/view-console/pom.xml
+++ b/eam/view/view-console/pom.xml
@@ -31,4 +31,15 @@
             <version>${platform.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <defaultGoal>compile</defaultGoal>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <includes>
+                    <include>**/**</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
