--- a/eam/view/view-datacenter/pom.xml
+++ b/eam/view/view-datacenter/pom.xml
@@ -30,6 +30,16 @@
             <artifactId>proxy</artifactId>
             <version>${platform.version}</version>
         </dependency>
-    </dependencies>  
-
+    </dependencies>
+    <build>
+        <defaultGoal>compile</defaultGoal>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <includes>
+                    <include>**/**</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
