--- a/eam/common/generator/pom.xml
+++ b/eam/common/generator/pom.xml
@@ -61,6 +61,12 @@
 
         <dependency>
             <groupId>com.dt.eam</groupId>
+            <artifactId>service-ops</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dt.eam</groupId>
             <artifactId>service-hrm</artifactId>
             <version>${platform.version}</version>
         </dependency>
@@ -87,6 +93,12 @@
         <dependency>
             <groupId>com.dt.eam</groupId>
             <artifactId>view-datacenter</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dt.eam</groupId>
+            <artifactId>view-ops</artifactId>
             <version>${platform.version}</version>
         </dependency>
 
