--- a/eam/common/generator/src/main/resources/config.yml
+++ b/eam/common/generator/src/main/resources/config.yml
@@ -49,7 +49,7 @@ applications:
     viewProjectPath: /view/view-hrm
     viewPrefixPath: public/business/hrm
     wrapperProjectPath:  /wrapper/wrapper-all
-
+  #数据中心
   service-datacenter:
     nacosGroup: service
     nacosDataId: service-datacenter.yml
@@ -59,6 +59,17 @@ applications:
     microServiceNameConst: DATACENTER
     viewProjectPath: /view/view-datacenter
     viewPrefixPath: public/business/datacenter
+    wrapperProjectPath: /wrapper/wrapper-all
+  #运维模块
+  service-ops:
+    nacosGroup: service
+    nacosDataId: service-ops.yml
+    serviceProjectPath: /service/service-ops
+    packageName: com.dt.eam.ops
+    primaryDatasourceConfigKey: spring.datasource.druid.primary
+    microServiceNameConst: OPS
+    viewProjectPath: /view/view-ops
+    viewPrefixPath: public/business/ops
     wrapperProjectPath: /wrapper/wrapper-all
  
     
