--- a/eam/pom.xml
+++ b/eam/pom.xml
@@ -30,7 +30,6 @@
 	</properties>
 
 
-
 	<modules>
 		<!-- 通用模块 -->
 		<module>./common/domain</module>
@@ -40,14 +39,17 @@
 		<module>./service/service-eam</module>
 		<module>./service/service-hrm</module>
 		<module>./service/service-datacenter</module>
+		<module>./service/service-ops</module>
 		<!-- 界面视图 -->
 		<module>./view/view-console</module>
 		<module>./view/view-hrm</module>
 		<module>./view/view-eam</module>
 		<module>./view/view-datacenter</module>
+		<module>./view/view-ops</module>
 		<!-- 聚合 -->
 		<module>./wrapper/wrapper-all</module>
 	</modules>
+
 
 	<dependencies>
 		<dependency>
