--- a/eam/common/generator/pom.xml
+++ b/eam/common/generator/pom.xml
@@ -101,6 +101,12 @@
             <artifactId>view-ops</artifactId>
             <version>${platform.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.dt.platform</groupId>
+            <artifactId>view-common</artifactId>
+            <version>0.0.2.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies> 
 </project>
