--- a/eam/common/generator/pom.xml
+++ b/eam/common/generator/pom.xml
@@ -84,7 +84,11 @@
             <version>${platform.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.dt.platform</groupId>
+            <artifactId>service-contract</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.dt.platform</groupId>
@@ -126,6 +130,12 @@
         <dependency>
             <groupId>com.dt.platform</groupId>
             <artifactId>view-knowledgebase</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dt.platform</groupId>
+            <artifactId>view-contract</artifactId>
             <version>${platform.version}</version>
         </dependency>
 
