--- a/eam/service/service-ops/pom.xml
+++ b/eam/service/service-ops/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>proxy</artifactId>  
             <version>${platform.version}</version> 
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <defaultGoal>compile</defaultGoal>
