--- a/eam/wrapper/wrapper-all/pom.xml
+++ b/eam/wrapper/wrapper-all/pom.xml
@@ -214,12 +214,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<fork>true</fork>
-					<includes>
-						<include>
-							<groupId>nothing</groupId>
-							<artifactId>nothing</artifactId>
-						</include>
-					</includes>
+					<mainClass>com.dt.platform.wrapper.WrapperAllApp</mainClass>
+					<layout>ZIP</layout>
 				</configuration>
 				<executions>
 					<execution>
