--- a/eam/service/service-eam/pom.xml
+++ b/eam/service/service-eam/pom.xml
@@ -75,11 +75,11 @@
             <version>3.0.2</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
+        <!-- https://mvnrepository.com/artifact/cn.afterturn/easypoi-base -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>easyexcel</artifactId>
-            <version>2.2.10</version>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+            <version>4.4.0</version>
         </dependency>
 
 
