generator pom 调整

--- a/eam/common/generator/pom.xml
+++ b/eam/common/generator/pom.xml
@@ -140,5 +140,18 @@
         </dependency>
 
 
-    </dependencies> 
+    </dependencies>
+
+    <build>
+        <defaultGoal>compile</defaultGoal>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <includes>
+                    <include>**/**</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
+
 </project>
