--- a/eam/wrapper/wrapper-all/pom.xml
+++ b/eam/wrapper/wrapper-all/pom.xml
@@ -53,6 +53,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.github.foxnic.web</groupId>
+			<artifactId>service-bpm</artifactId>
+			<version>${foxnic-web.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.dt.platform</groupId>
 			<artifactId>domain</artifactId>
 			<version>${platform.version}</version>
