--- a/eam/service/service-eam/pom.xml
+++ b/eam/service/service-eam/pom.xml
@@ -26,7 +26,14 @@
             <version>${platform.version}</version>
         </dependency>
 
-		<dependency> 
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.dt.platform</groupId>  
             <artifactId>domain</artifactId>  
             <version>${platform.version}</version> 
