--- a/eam/deploy/bin/app.conf
+++ b/eam/deploy/bin/app.conf
@@ -2,16 +2,9 @@
 #
 #
 ###############################################################
-cur_dir=$(cd `dirname $0`; pwd)
-app_conf="${cur_dir}/app.conf"
-MYSQL=`cat $app_conf|grep MYSQL=|awk -F "=" '{print $2}'`
-DATA_CLEAR=`cat $app_conf|grep DATA_CLEAR=|awk -F "=" '{print $2}'`
-DB_NAME=`cat $app_conf|grep DB_NAME=|awk -F "=" '{print $2}'`
-DB_USER=`cat $app_conf|grep DB_USER=|awk -F "=" '{print $2}'`
-DB_HOST=`cat $app_conf|grep DB_HOST=|awk -F "=" '{print $2}'`
-DB_PWD=`cat $app_conf|grep DB_PWD=|awk -F "=" '{print $2}'`
 
-
+JAVA=java
+APP_NAME=eam.jar
 
 
 APP_DIR=/home/eam/eam
@@ -25,6 +18,8 @@ DB_NAME=eam
 DB_USER=eam
 DB_HOST=127.0.0.1
 DB_PWD=PX
+
+
 
 
 
