--- a/eam/deploy/application.yml
+++ b/eam/deploy/application.yml
@@ -5,7 +5,7 @@ server:
     session:
       # 会话超时时间，如 30s , 20m 等
       timeout: 1200s
-  port: 8080
+  port: 26788
 
 spring:
   main:
@@ -29,15 +29,15 @@ spring:
     druid:
       primary:
         encrypt:
-          enable: true
+          enable: false
           file:
             windows: d:/foxnic/passwd.txt
             mac: /Users/Shared/foxnic/passwd.txt
             linux: /foxnic/passwd.txt
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: ai+mCm8asbK9SNrQDk7ac29neidjdgHp2jFU7HYbZZOmvbR4OKNXb877AJzdYToBGLgN+etaRMM4wzovFLMULMH6brIo3zgsyub026w4Il4Oqg9jzyYsLaa6LNyznmYm5kKoS17K9XHBX8e0lDuik9pcc/DfdjaUkhm0MmOALUM86dHiyURHUP5hfQ4otf/kE9gVP+GO1G7fUdc4JBLDYylfBzmp9SNKQcTLQ/5AkWcnbm89+5pAz4JNnCJILF0B
-        username: tD5wkJAfnCt04A+Y+QN5GA==
-        password: ODGx5F84xpWJgfRFnzAaYhViHJqrTO3uxxDZ2lRlZNk=
+        url: jdbc:mysql://127.0.0.1:3306/eam_demo?useSSL=false&serverTimezone=Hongkong&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowPublicKeyRetrieval=true&tinyInt1isBit=false
+        username: root
+        password: root
         # 启动程序时，在连接池中初始化多少个连接
         initialSize: 16
         # 连接池中最多支持多少个活动会话
@@ -87,6 +87,54 @@ spring:
       #redis:
       #port: 6379
     #host: 127.0.0.1
+
+
+foxnic:
+  # 设置 Join 的二级缓存
+  cache:
+    # 默认配置
+    default:
+      # local,remote,both,none
+      mode: none
+      # 本地缓存配置 : 最大元素个数
+      local-limit: 10240
+      # 本地缓存配置 : 本地缓存超时时长；-1 表示用不过期
+      local-expire: 1200000
+      # 远程缓存配置 :  超时 20 分钟，单位毫秒; -1 表示用不过期
+      remote-expire: 1200000
+    # 按实体类型配置缓存细节
+    details:
+      "org.github.foxnic.web.domain.oauth.Resourze":
+        mode: none
+        local-limit: 10240
+        local-expire: 1200000
+        remote-expire: 1200000
+      "org.github.foxnic.web.domain.system.DictItem":
+        mode: local
+        local-limit: 10240
+        local-expire: 1200000
+        remote-expire: 1200000
+        strategy:
+          query-list:
+            is-accurate: true
+            cache-empty-result: true
+            properties: dictCode
+      "org.github.foxnic.web.domain.system.DbCache":
+        mode: local
+        local-limit: 10240
+        local-expire: 1200000
+        remote-expire: 1200000
+        strategy:
+          query-list-1:
+            is-accurate: true
+            cache-empty-result: true
+            properties: ownerType,ownerId
+          query-list-2:
+            is-accurate: true
+            cache-empty-result: true
+            properties: area,ownerType,ownerId
+
+
 
 #禁止自动扫描API
 springfox:
@@ -139,7 +187,7 @@ storage:
       #在不同的环境下选择不同的路径
       windows: c:/uploads
       mac: /opt/upload
-      linux: /home/eam/eam/upload
+      linux: /opt/eam/upload
 
 develop:
   language: defaults
