--- a/eam/deploy/bin/app.conf
+++ b/eam/deploy/bin/app.conf
@@ -6,18 +6,21 @@
 JAVA=java
 APP_NAME=eam.jar
 
-
 APP_DIR=/home/eam/eam
 BACKUP_DIR=/home/eam/eam/backup/dbdata
 DATA_CLEAR=1
 
 ######APP MYSQL
-MYSQL_DUMP=/usr/local/mysql/bin/mysqldump
 MYSQL=/usr/local/mysql/bin/mysql
+MYSQL_DUMP=/usr/local/mysql/bin/mysqldump
+MYSQL_ADMIN=/usr/local/mysql/bin/mysqladmin
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_NAME=eam
 DB_USER=eam
-DB_HOST=127.0.0.1
 DB_PWD=PX
+
+
 
 
 
